<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>cupoch_contrib</name>
    <version>0.0.1</version>
    <description>
        cupoch_contrib
    </description>
    <maintainer email="lzs_1993@qq.com">ZhenshengLi</maintainer>
    <license>MIT</license>
    <url>http://cupoch_contrib</url>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>cupoch_conversions</build_depend>

    <depend>ga_cmake</depend>

    <test_depend>rosunit</test_depend>
    <export>
    </export>
</package>
